wip: MongoDB migration in progress - partial